# patent_search_stream

./: .gitignore  .gitmodules  README.md  pyproject.toml
app/: app.py  main.py  run.sh  server.py
app/services/hierarchical_agent_teams/: graph.py
app/services/hierarchical_agent_teams/docwriter_team/: graph.py
app/services/hierarchical_agent_teams/kor_patent_search_team/: agent.py  graph.py
app/services/hierarchical_agent_teams/research_team/: tools.py
app/services/langgraph/: graph.py
app/services/patent/api/: __init__.py  agent.py  patent_class.py  prompt.py  simplachain.py
app/services/patent/simple_graph/: agent.py  graph.py  prompt.py
app/services/simple_langgraph2/: agent.py  graph.py
services/hierarchical_agent_teams/: common.py  graph.py
services/hierarchical_agent_teams/docwriter_team/: agent.py  tools.py
services/hierarchical_agent_teams/research_team/: agent.py  graph.py  tools.py
services/patent/api/: __init__.py  agent.py  patent_class.py  prompt.py  simplachain.py  util.py
services/simple_langgraph/: agent.py  graph.py  tool.py
services/simple_langgraph2/: agent.py  prompt.py
