[tool.poetry]
name = "patent_search_stream"
version = "0.1.0"
description = "특허 검색 스트림릿 애플리케이션"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "patent_search_stream"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.39.0"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
requests = "^2.32.3"
plotly = "^5.24.1"
streamlit-chat = "^0.1.1"
icecream = "^2.1.3"
xmltodict = "^0.14.2"
langgraph = "^0.2.44"
langchain-experimental = "^0.3.2"
langchain-teddynote = "^0.3.28"
jupyterlab = "^4.3.0"
stringcase = "^1.2.0"

# 로컬 패키지 의존성 추가
langchain-kipris-tools = {path = "pkgs/kipris_tools", develop = true}

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
